@@ -2,6 +2,12 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    [ADDED]
+
+    - Added Prereqs::AuthorDeps
+
+    [CHANGED]
+
     - Swap in RunExtraTests instead of CheckExtraTests
 
 0.057     2013-10-20 14:15:20 America/New_York
